--- a/src/app/bot/bot-dashboard/bot-dashboard.component.html
+++ b/src/app/bot/bot-dashboard/bot-dashboard.component.html
@@ -1,16 +1,16 @@
-
 <div style="background-color:rgb(55, 55, 55)">
     <div class="row" style="width: 100%">
         <div class="col-lg-12">
-                <app-bot-instance ></app-bot-instance>
+            <app-bot-instance></app-bot-instance>
         </div>
         <!-- <div class="col-lg-7">
 
         </div> -->
     </div>
-    <div class="row">
+    <!-- <div class="row">
         <div class="col-lg-12">
+            <app-gauge></app-gauge>
             bot-dashboard 3
         </div>
-    </div>
+    </div> -->
 </div>
